--- a/app/views/forums/edit.scala.html
+++ b/app/views/forums/edit.scala.html
@@ -50,7 +50,7 @@ title = "发布主题_讨论吧_广场_食美特，爱美食爱生活"
             $.smeite.dialog.isLogin();
         }
         $.smeite.editor = $.smeite.Editor();
-        init.load("app/forum/forum.new");
+        init.load("app/forum/forum");
     });
 
 </script>
