--- a/app/views/forums/view.scala.html
+++ b/app/views/forums/view.scala.html
@@ -194,7 +194,6 @@ description =  topic._2.intro
 
         $.smeite.editor = $.smeite.Editor({
             formId:"J_PostCmtArea",
-
             btnImg:{visible:false} ,
             btnBaobei:{visible:false}
         });
@@ -227,8 +226,7 @@ description =  topic._2.intro
 
         });
 
-        $.smeite.editor.mediaImgList = {"1":"http://s6.img.guang.com/f/252306_5523327282_1368687198687.jpg"};
-     init.load("app/forum/forum,app/forum/forum.follow,app/forum/forum.view.decode");
+   init.load("app/forum/forum,app/forum/forum.follow,app/forum/forum");
 
     });
 </script>
