--- a/app/views/forums/forum.scala.html
+++ b/app/views/forums/forum.scala.html
@@ -220,7 +220,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/forum/forum-old')
+        init.load('app/forum/forum')
     });
 </script>
 }
