--- a/app/views/infos/help/rebate.scala.html
+++ b/app/views/infos/help/rebate.scala.html
@@ -45,7 +45,9 @@ title =  "关于我们_食美特，爱美食爱生活"
                     <h5>第三步：在淘宝上立即购买此商品</h5>
                     </div>
 
-
+                     <p>
+                         <a href="/forum/view/41">去看看详细介绍</a>
+                     </p>
                     <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
