adjust forum follow

--- a/app/views/forums/view.scala.html
+++ b/app/views/forums/view.scala.html
@@ -36,7 +36,7 @@ description =  topic._2.intro
             <a class="edit mt5" href="@controllers.routes.Forums.edit(topic._2.id.get)" rel="nofollow" >编辑</a>
              &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             }
-            <a   href="javascript:;" class="follow-topic follow mt5" data-followtype="0" data-topictitle="@topic._2.title" data-topicid="@topic._2.id.get" title="@topic._2.title">+ 关注</a>
+            <a rel="topicFollow"  href="javascript:;" class="follow-btn" data-followtype="0" data-topictitle="@topic._2.title" data-topicid="@topic._2.id.get" title="@topic._2.title">+ 关注</a>
         </div>
         <div class="forum-con">
             <ul class="forum-post " id="J_ForumPost">
