--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -58,7 +58,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 <div class="theme-state">
                                    @if(t=="love"){
                                     <div style="float: left" class="followed-btn">已关注<span class="mr5 ml5">|</span>
-                                        <a class="unfollow-theme" data-themeid="@item._1._1" data-id="@item._1._1">取消</a>
+                                        <a rel="removeThemeFollow" data-themeid="@item._1._1" data-id="@item._1._1">取消</a>
                                     </div>
                                     <span class="ml15">@item._1._4 人关注</span>
                                     }else {
