--- a/app/views/pages/gallery.scala.html
+++ b/app/views/pages/gallery.scala.html
@@ -43,9 +43,9 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
-                <a href="javascript:;" id="J_follow" class="follow-theme" data-themeid="@themeId">关注</a>
+                <a rel="followTheme" href="javascript:;"  class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
-                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+                    <a rel="followTheme" href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
                     </a>
                     </span>
@@ -90,7 +90,7 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
         }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/jie,app/followUser');
+        init.load('app/jie,app/theme.favor');
     });
 </script>
 }
