--- a/app/views/pages/jie.scala.html
+++ b/app/views/pages/jie.scala.html
@@ -49,7 +49,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" style="color: rgb(153, 153, 153); ">@themeIntro</div>
-                <a href="javascript:;" id="J_follow" class="follow-theme" data-themeid="@themeId">关注</a>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
                     <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
