--- a/public/assets/css/template/theme.detail.css
+++ b/public/assets/css/template/theme.detail.css
@@ -834,6 +834,18 @@
     border-radius: 5px;
     display: inline-block
 }
+.brand-nav .nav-bar li .nav-item a.followed {
+    float: left;
+    width: 56px;
+    height: 30px;
+    background: #f3f3f3;
+    _margin-right: 20px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: 400;
+    border-radius: 5px;
+    display: inline-block
+}
 .brand-nav .nav-bar li .nav-item a.btn-share{
     text-align: left;
     font-weight: normal;
