add user static in user admin function

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -73,9 +73,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href='@controllers.admin.routes.Adverts.channel("index")'>
+                        <a href='@controllers.admin.routes.Managers.updateUserStats'>
                             <i class="icon-piechart"></i>
-                            频道管理
+                            用户统计数据更新
                         </a>
                     </li>
                 </ul>
