--- a/app/views/themes/board.scala.html
+++ b/app/views/themes/board.scala.html
@@ -276,7 +276,7 @@ description = theme.intro.get
 <script type="text/javascript">
 
     seajs.use('app/init', function (init) {
-        init.load("app/theme/theme.detail,app/theme/theme.board,app/theme/theme.discuss,app/theme/favor,app/smeite.simpleEditor");
+        init.load("app/theme/theme.detail,app/theme/theme.board,app/theme/theme.discuss,app/theme/theme.favor,app/smeite.simpleEditor");
     });
 </script>
 }
