adjust some bugs

--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -252,7 +252,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/theme/theme.detail,app/theme/theme.discuss,app/theme/theme.favor');
+        init.load('app/theme/theme.detail,app/theme/theme.discuss,app/theme/theme.favor,app/goods/goods.favor');
 
     });
 </script>
