--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -89,9 +89,9 @@
                 <div class="xiaoxi-box fr clearfix">
                     <a rel="xiaoxi" class="xiaoxi fl" href="javascript:;">消息<span class="arrow-dn"></span></a>
                     <ul class="dropdown xiaoxi-dropdown" >
-                        <li><a href="@controllers.users.routes.Users.fans(user.get.id.get)">查看我的粉丝</a></li>
-                        <li><a href="@controllers.users.routes.UsersMsg.comment">查看评论我的</a></li>
-                        <li><a href="@controllers.users.routes.UsersMsg.reply">查看回复我的</a></li>
+                        <li><a href="@controllers.users.routes.UsersMsg.at">查看@@我的</a></li>
+                        <li><a href="@controllers.users.routes.UsersMsg.love">查看喜欢我的</a></li>
+                        <li><a href="@controllers.users.routes.UsersMsg.comment">查看回复我的</a></li>
                         <li class="last"><a href="@controllers.users.routes.UsersMsg.system">查看通知</a></li>
                     </ul>
                 </div>
