--- a/app/views/users/msg/comment.scala.html
+++ b/app/views/users/msg/comment.scala.html
@@ -5,20 +5,12 @@ user
 <div class="container" id="home">
     <div class="content clearfix">
         <div class="side-nav">
-            <h2>我的通知</h2>
+            <h2>消息中心</h2>
             <ul class="nav_r">
-                <li>
-                    <a href="/user/msg/system">系统通知</a>
-                </li>
-                <li>
-                    <a class="on" href="/user/msg/comment">评论我的</a>
-                </li>
-                <li>
-                    <a href="/user/msg/reply">回复我的</a>
-                </li>
-                <li>
-                    <a href="/user/msg/at">@@我的</a>
-                </li>
+                <li><a href="@controllers.users.routes.UsersMsg.at">@@我的</a></li>
+                <li><a href="@controllers.users.routes.UsersMsg.love">喜欢我的</a></li>
+                <li><a class="on" href="@controllers.users.routes.UsersMsg.comment">回复我的</a></li>
+                <li><a href="@controllers.users.routes.UsersMsg.system">系统通知</a></li>
 
             </ul>
         </div>				<div class="main-content">
