--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8"/>
     <meta name="keywords" content=@keywords>
     <meta name="description" content=@description>
-    <link rel="shortcut icon" type="image/png" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
     <link rel="stylesheet" href="/assets/css/global/global.css?v=2013051901">
     <link rel="stylesheet" href="@css?v=2013051901">
     <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
