--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -31,7 +31,7 @@ user
 
                 <div class="title">二：这是您的专用邀请链接，可通过任何方式发送给好友</div>
                 <div class="invite-link clearfix">
-                    <textarea id="clip-text" class="base-txa invite_txa">这里，不仅是中国最大的美食购物分享社区，而且购物还可以获得集分宝哦！~ http://smeite.com/user/regist?i=@user.get.id.get</textarea>
+                    <textarea id="clip-text" class="base-txa invite_txa">这里，不仅是中国最大的美食购物社区，而且还赠送额外的集分宝哦！~ http://smeite.com/user/regist?i=@user.get.id.get</textarea>
                     <input type="button" class="bbl-btn submit" id="J_Clip" value="复制">
                 </div>
 
