--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -15,7 +15,7 @@ user
         </div>
         <div class="main-content">
             <div class="credits mb20">
-                <div class="credits_info">您已经获得<span>@user.get.credits</span>个集分宝，值<span>￥@(user.get.withdrawCredits/100.0)</span>元</div>
+                <div class="credits_info">您已经获得<span>@user.get.credits</span>个集分宝，值<span>￥@(user.get.credits/100.0)</span>元</div>
 
                 <div class="title">集分宝返利记录</div>
             <table class="table">
