--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -268,7 +268,7 @@
     margin-top: 5px;
     background: url(images/correct.png) no-repeat 0 0 transparent;
     padding-left: 20px;
-    color: #F60;
+    color: #e26;
     font-size: 14px;
     font-weight: bold;
 }
